feat(new feature): j14 - switch expression